<resources>
    <string name="app_name">whitecanary</string>
    <string name="video">Video</string>
    <string name="music">Music</string>
    <string name="name_for_song_playing">sname</string>
    <string name="curent_time">timec</string>
    <string name="total_time">timet</string>
    <string name="coolgraphic">musicgraphic</string>
    <string name="previousgraphic">previous</string>
    <string name="nextgraphic">next</string>
    <string name="pausegraphic">pause</string>
    <string name="videoplayingname">namev</string>
    <string name="videotoggraphic">vidtog</string>
    <string name="nextvideobutton">nextvid</string>
    <string name="previousvideobutton">prevvid</string>
</resources>