<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B1C27"
    tools:context=".PlaySong">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/casette"
        android:contentDescription="@string/coolgraphic" />

    <TextView
        android:id="@+id/song_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:fadingEdge="horizontal"
        android:fontFamily="@font/comfortaa_bold"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/name_for_song_playing"
        android:textColor="#FFF200"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/vidseek"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.557" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.65999997">

        <ImageView
            android:id="@+id/previous"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/previous2"
            android:contentDescription="@string/previousgraphic" />

        <ImageView
            android:id="@+id/play"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/pause2"
            android:contentDescription="@string/pausegraphic" />

        <ImageView
            android:id="@+id/next"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/next2"
            android:contentDescription="@string/nextgraphic" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/vidseek"
        android:layout_width="300dp"
        android:layout_height="68dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>