<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B1C27"
    tools:context=".PlayVideo">


    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="0dp"
        android:layout_height="276dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/vidseek"
        android:layout_width="336dp"
        android:layout_height="34dp"
        android:layout_marginTop="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surfaceView" />

    <TextView
        android:id="@+id/video_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:fadingEdge="horizontal"
        android:fontFamily="@font/comfortaa_bold"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/videoplayingname"
        android:textColor="#EAD200"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/vidseek"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surfaceView" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="98dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vidseek">

        <ImageView
            android:id="@+id/videoprev"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/previous2"
            android:contentDescription="@string/previousvideobutton" />

        <ImageView
            android:id="@+id/videotog"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/videotoggraphic"
            app:srcCompat="@drawable/pause2" />

        <ImageView
            android:id="@+id/videonext"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/next2"
            android:contentDescription="@string/nextvideobutton" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>